@@ -100,7 +100,12 @@
             <version>1.8.5</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.restlet.jse</groupId>
+            <artifactId>org.restlet</artifactId>
+            <version>2.0.13</version>
+            <scope>test</scope>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.springframework</groupId>-->
         <!--<artifactId>spring-web</artifactId>-->
